test_results/native_container_logs/cargo_test_native_make_move_trace_expected_fail_2026-05-26.txt
=== cmz exec start 2026-05-26T16:13:08Z ===
   Compiling cmz-engine-sys v0.1.0 (/work/native/crates/cmz-engine-sys)
error[E0599]: no method named `make_move_trace_packets` found for struct `Engine` in the current scope
   --> crates/cmz-engine-sys/src/lib.rs:376:28
    |
 56 | pub struct Engine {
    | ----------------- method `make_move_trace_packets` not found for this struct
...
376 |         let trace = engine.make_move_trace_packets(START, "e2e4", 0, 1, false).unwrap();
    |                            ^^^^^^^^^^^^^^^^^^^^^^^
    |
help: there is a method `legal_trace_packets` with a similar name, but with different arguments
   --> crates/cmz-engine-sys/src/lib.rs:109:5
    |
109 |     pub fn legal_trace_packets(&mut self, fen: &str) -> Result<Vec<TracePacket>, String> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0599`.
error: could not compile `cmz-engine-sys` (lib test) due to 1 previous error
=== cmz exec end 2026-05-26T16:13:08Z status=101 ===

